# square-qrcode-labels

./: LICENSE.txt  README.md  item_template.html  main.py  pyproject.toml  style.css
