[tool.poetry]
name = "etiketten"
version = "0.1.0"
description = ""
authors = ["Andre-Patrick Bubel <code@apb.name>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
blabel = "^0.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
